<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">


    <View android:background="@color/common_dark" android:layout_height="1dp" android:layout_width="match_parent"/>

    <LinearLayout android:background="@color/common_background" android:layout_height="50dp" android:layout_width="match_parent">

        <View android:background="@color/common_tip" android:layout_gravity="center_vertical" android:layout_height="30dp" android:layout_width="5dp"/>

        <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_marginLeft="@dimen/common_margin" android:layout_width="match_parent" android:text="@string/market_market_fragment_profit_order80" android:textColor="@color/common_text" android:textSize="16sp"/>

    </LinearLayout>

    <View android:background="@color/common_dark" android:layout_height="1dp" android:layout_width="match_parent"/>


    <LinearLayout android:background="@color/common_background" android:layout_height="50dp" android:layout_width="match_parent" android:orientation="horizontal" android:paddingLeft="@dimen/common_margin" android:paddingRight="@dimen/common_margin">

        <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_weight="1" android:layout_width="0dp" android:text="@string/market_market_fragment_profit_order150" android:textColor="@color/common_hint" android:textSize="12sp"/>

        <TextView android:gravity="center" android:layout_height="match_parent" android:layout_weight="1" android:layout_width="0dp" android:text="@string/market_market_fragment_profit_order170" android:textColor="@color/common_hint" android:textSize="12sp"/>

        <TextView android:gravity="center_vertical|right" android:layout_height="match_parent" android:layout_weight="1" android:layout_width="0dp" android:text="@string/market_dealFragment4" android:textColor="@color/common_hint" android:textSize="12sp"/>

        <TextView android:gravity="center_vertical|right" android:layout_height="match_parent" android:layout_weight="1.5" android:layout_width="0dp" android:text="@string/market_dealFragment3" android:textColor="@color/common_hint" android:textSize="12sp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView android:id="@+id/orderList" android:layout_height="match_parent" android:layout_width="match_parent"/>
</LinearLayout>
